<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_events"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/menu_notifications" />
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>